Update from https://github.com/thebesttv/eserver-static/commit/4b0de003c064a28b88c2048f5a5c142c62b3d581

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 12:17 -->
+<!-- 2022-11-16 15:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4dab717">1. 妙妙文章</a>
+<li><a href="#org3a4d5aa">1. 妙妙文章</a>
 <ul>
-<li><a href="#org8305783">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org2a02fab">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orge849998">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgf3c4436">1.4. 关于编辑器</a></li>
-<li><a href="#orgeb10f6f">1.5. 关于代码</a>
+<li><a href="#org716815f">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgaab0993">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org72eb932">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org807f243">1.4. 关于编辑器</a></li>
+<li><a href="#orgc093db5">1.5. 关于代码</a>
 <ul>
-<li><a href="#org405ffe7">1.5.1. Lisp</a></li>
+<li><a href="#org617148a">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org8daf104">1.6. 关于CPU</a></li>
-<li><a href="#org09acba1">1.7. 关于算法</a>
+<li><a href="#org7979725">1.6. 关于CPU</a></li>
+<li><a href="#orga171c8b">1.7. 关于算法</a>
 <ul>
-<li><a href="#org70deb8b">1.7.1. 关于随机</a></li>
+<li><a href="#org1385a61">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgded5c1e">1.8. 关于AI</a></li>
-<li><a href="#orgd5c95fa">1.9. 关于软件</a>
+<li><a href="#org09d4201">1.8. 关于AI</a></li>
+<li><a href="#orga9a4c5f">1.9. 关于软件</a>
 <ul>
-<li><a href="#org466a98a">1.9.1. SQLite</a></li>
+<li><a href="#org90e51c0">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgd00e31c">1.10. 关于workflow</a></li>
+<li><a href="#org5a1635b">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org4a42a3c">2. 棒棒视频</a>
+<li><a href="#org31f32c3">2. 棒棒视频</a>
 <ul>
-<li><a href="#orge8f8398">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0ba966b">2.2. 各种剧</a></li>
-<li><a href="#org8f2c742">2.3. 电影</a></li>
+<li><a href="#org252b746">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgf67370f">2.2. 各种剧</a></li>
+<li><a href="#org97afe38">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgd355018">3. 快乐游戏</a></li>
-<li><a href="#org234c3a9">4. 宝藏博主</a></li>
-<li><a href="#org9ac8e5a">5. 有意思的</a>
+<li><a href="#orgf36949c">3. 快乐游戏</a></li>
+<li><a href="#org5da2eab">4. 宝藏博主</a></li>
+<li><a href="#orga00aed0">5. 有意思的</a>
 <ul>
-<li><a href="#org7765b4f">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org0e34068">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgbfe3907">6. 我想玩的</a></li>
+<li><a href="#org659d07e">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org4dab717" class="outline-2">
-<h2 id="org4dab717"><span class="section-number-2">1.</span> <a href="#org4dab717">妙妙文章</a></h2>
+<div id="outline-container-org3a4d5aa" class="outline-2">
+<h2 id="org3a4d5aa"><span class="section-number-2">1.</span> <a href="#org3a4d5aa">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org6b802f8">
+<figure id="org1cb11da">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org8305783" class="outline-3">
-<h3 id="org8305783"><span class="section-number-3">1.1.</span> <a href="#org8305783">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org716815f" class="outline-3">
+<h3 id="org716815f"><span class="section-number-3">1.1.</span> <a href="#org716815f">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org2a02fab" class="outline-3">
-<h3 id="org2a02fab"><span class="section-number-3">1.2.</span> <a href="#org2a02fab">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgaab0993" class="outline-3">
+<h3 id="orgaab0993"><span class="section-number-3">1.2.</span> <a href="#orgaab0993">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orge849998" class="outline-3">
-<h3 id="orge849998"><span class="section-number-3">1.3.</span> <a href="#orge849998">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org72eb932" class="outline-3">
+<h3 id="org72eb932"><span class="section-number-3">1.3.</span> <a href="#org72eb932">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgf3c4436" class="outline-3">
-<h3 id="orgf3c4436"><span class="section-number-3">1.4.</span> <a href="#orgf3c4436">关于编辑器</a></h3>
+<div id="outline-container-org807f243" class="outline-3">
+<h3 id="org807f243"><span class="section-number-3">1.4.</span> <a href="#org807f243">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgeb10f6f" class="outline-3">
-<h3 id="orgeb10f6f"><span class="section-number-3">1.5.</span> <a href="#orgeb10f6f">关于代码</a></h3>
+<div id="outline-container-orgc093db5" class="outline-3">
+<h3 id="orgc093db5"><span class="section-number-3">1.5.</span> <a href="#orgc093db5">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org405ffe7" class="outline-4">
-<h4 id="org405ffe7"><span class="section-number-4">1.5.1.</span> <a href="#org405ffe7">Lisp</a></h4>
+<div id="outline-container-org617148a" class="outline-4">
+<h4 id="org617148a"><span class="section-number-4">1.5.1.</span> <a href="#org617148a">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org8daf104" class="outline-3">
-<h3 id="org8daf104"><span class="section-number-3">1.6.</span> <a href="#org8daf104">关于CPU</a></h3>
+<div id="outline-container-org7979725" class="outline-3">
+<h3 id="org7979725"><span class="section-number-3">1.6.</span> <a href="#org7979725">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org09acba1" class="outline-3">
-<h3 id="org09acba1"><span class="section-number-3">1.7.</span> <a href="#org09acba1">关于算法</a></h3>
+<div id="outline-container-orga171c8b" class="outline-3">
+<h3 id="orga171c8b"><span class="section-number-3">1.7.</span> <a href="#orga171c8b">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org70deb8b" class="outline-4">
-<h4 id="org70deb8b"><span class="section-number-4">1.7.1.</span> <a href="#org70deb8b">关于随机</a></h4>
+<div id="outline-container-org1385a61" class="outline-4">
+<h4 id="org1385a61"><span class="section-number-4">1.7.1.</span> <a href="#org1385a61">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgded5c1e" class="outline-3">
-<h3 id="orgded5c1e"><span class="section-number-3">1.8.</span> <a href="#orgded5c1e">关于AI</a></h3>
+<div id="outline-container-org09d4201" class="outline-3">
+<h3 id="org09d4201"><span class="section-number-3">1.8.</span> <a href="#org09d4201">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd5c95fa" class="outline-3">
-<h3 id="orgd5c95fa"><span class="section-number-3">1.9.</span> <a href="#orgd5c95fa">关于软件</a></h3>
+<div id="outline-container-orga9a4c5f" class="outline-3">
+<h3 id="orga9a4c5f"><span class="section-number-3">1.9.</span> <a href="#orga9a4c5f">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org466a98a" class="outline-4">
-<h4 id="org466a98a"><span class="section-number-4">1.9.1.</span> <a href="#org466a98a">SQLite</a></h4>
+<div id="outline-container-org90e51c0" class="outline-4">
+<h4 id="org90e51c0"><span class="section-number-4">1.9.1.</span> <a href="#org90e51c0">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd00e31c" class="outline-3">
-<h3 id="orgd00e31c"><span class="section-number-3">1.10.</span> <a href="#orgd00e31c">关于workflow</a></h3>
+<div id="outline-container-org5a1635b" class="outline-3">
+<h3 id="org5a1635b"><span class="section-number-3">1.10.</span> <a href="#org5a1635b">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org4a42a3c" class="outline-2">
-<h2 id="org4a42a3c"><span class="section-number-2">2.</span> <a href="#org4a42a3c">棒棒视频</a></h2>
+<div id="outline-container-org31f32c3" class="outline-2">
+<h2 id="org31f32c3"><span class="section-number-2">2.</span> <a href="#org31f32c3">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orge8f8398" class="outline-3">
-<h3 id="orge8f8398"><span class="section-number-3">2.1.</span> <a href="#orge8f8398">Veritasium 真理元素</a></h3>
+<div id="outline-container-org252b746" class="outline-3">
+<h3 id="org252b746"><span class="section-number-3">2.1.</span> <a href="#org252b746">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -858,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0ba966b" class="outline-3">
-<h3 id="org0ba966b"><span class="section-number-3">2.2.</span> <a href="#org0ba966b">各种剧</a></h3>
+<div id="outline-container-orgf67370f" class="outline-3">
+<h3 id="orgf67370f"><span class="section-number-3">2.2.</span> <a href="#orgf67370f">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8f2c742" class="outline-3">
-<h3 id="org8f2c742"><span class="section-number-3">2.3.</span> <a href="#org8f2c742">电影</a></h3>
+<div id="outline-container-org97afe38" class="outline-3">
+<h3 id="org97afe38"><span class="section-number-3">2.3.</span> <a href="#org97afe38">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orge1bc37a">
+<figure id="orga66540f">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd355018" class="outline-2">
-<h2 id="orgd355018"><span class="section-number-2">3.</span> <a href="#orgd355018">快乐游戏</a></h2>
+<div id="outline-container-orgf36949c" class="outline-2">
+<h2 id="orgf36949c"><span class="section-number-2">3.</span> <a href="#orgf36949c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org234c3a9" class="outline-2">
-<h2 id="org234c3a9"><span class="section-number-2">4.</span> <a href="#org234c3a9">宝藏博主</a></h2>
+<div id="outline-container-org5da2eab" class="outline-2">
+<h2 id="org5da2eab"><span class="section-number-2">4.</span> <a href="#org5da2eab">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org76d1cbd">
+<figure id="orgb8c7496">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org9ac8e5a" class="outline-2">
-<h2 id="org9ac8e5a"><span class="section-number-2">5.</span> <a href="#org9ac8e5a">有意思的</a></h2>
+<div id="outline-container-orga00aed0" class="outline-2">
+<h2 id="orga00aed0"><span class="section-number-2">5.</span> <a href="#orga00aed0">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org7765b4f" class="outline-3">
-<h3 id="org7765b4f"><span class="section-number-3">5.1.</span> <a href="#org7765b4f">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org0e34068" class="outline-3">
+<h3 id="org0e34068"><span class="section-number-3">5.1.</span> <a href="#org0e34068">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgbfe3907" class="outline-2">
-<h2 id="orgbfe3907"><span class="section-number-2">6.</span> <a href="#orgbfe3907">我想玩的</a></h2>
+<div id="outline-container-org659d07e" class="outline-2">
+<h2 id="org659d07e"><span class="section-number-2">6.</span> <a href="#org659d07e">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1048,7 +1048,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 12:17</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 15:17</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
