--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 15:17 -->
+<!-- 2022-11-17 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgae0a1b0">1. 一大早</a></li>
-<li><a href="#orgff6baa5">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org0fa8acc">3. 科研训练</a></li>
-<li><a href="#orgfe439c1">4. 520</a></li>
+<li><a href="#org3d32cdb">1. 一大早</a></li>
+<li><a href="#org6cdd40c">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orgc0e225a">3. 科研训练</a></li>
+<li><a href="#orgc65c493">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgae0a1b0" class="outline-2">
-<h2 id="orgae0a1b0"><span class="section-number-2">1.</span> <a href="#orgae0a1b0">一大早</a></h2>
+<div id="outline-container-org3d32cdb" class="outline-2">
+<h2 id="org3d32cdb"><span class="section-number-2">1.</span> <a href="#org3d32cdb">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgff6baa5" class="outline-2">
-<h2 id="orgff6baa5"><span class="section-number-2">2.</span> <a href="#orgff6baa5">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org6cdd40c" class="outline-2">
+<h2 id="org6cdd40c"><span class="section-number-2">2.</span> <a href="#org6cdd40c">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org0fa8acc" class="outline-2">
-<h2 id="org0fa8acc"><span class="section-number-2">3.</span> <a href="#org0fa8acc">科研训练</a></h2>
+<div id="outline-container-orgc0e225a" class="outline-2">
+<h2 id="orgc0e225a"><span class="section-number-2">3.</span> <a href="#orgc0e225a">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfe439c1" class="outline-2">
-<h2 id="orgfe439c1"><span class="section-number-2">4.</span> <a href="#orgfe439c1">520</a></h2>
+<div id="outline-container-orgc65c493" class="outline-2">
+<h2 id="orgc65c493"><span class="section-number-2">4.</span> <a href="#orgc65c493">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 15:17</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-17 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
