--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-16 15:17 -->
+<!-- 2022-11-17 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf3dbaf2">1. 暑假</a>
+<li><a href="#org42ee7d9">1. 暑假</a>
 <ul>
-<li><a href="#orgd7a8ebb">1.1. 夏令营</a></li>
+<li><a href="#org512c43a">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org4061746">2. 打工</a></li>
-<li><a href="#orgbae2530">3. 我的928</a>
+<li><a href="#orgea5f20a">2. 打工</a></li>
+<li><a href="#orgc024e4d">3. 我的928</a>
 <ul>
-<li><a href="#org5d2d6c0">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgce6f26e">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org5669d90">4. 他们的928</a></li>
-<li><a href="#orgcc7fe4f">5. 总结</a></li>
+<li><a href="#org5e8ce95">4. 他们的928</a></li>
+<li><a href="#org0764ac5">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org6c0a5e9">
+<figure id="org5e7eb3f">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgf3dbaf2" class="outline-2">
-<h2 id="orgf3dbaf2"><span class="section-number-2">1.</span> <a href="#orgf3dbaf2">暑假</a></h2>
+<div id="outline-container-org42ee7d9" class="outline-2">
+<h2 id="org42ee7d9"><span class="section-number-2">1.</span> <a href="#org42ee7d9">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgd7a8ebb" class="outline-3">
-<h3 id="orgd7a8ebb"><span class="section-number-3">1.1.</span> <a href="#orgd7a8ebb">夏令营</a></h3>
+<div id="outline-container-org512c43a" class="outline-3">
+<h3 id="org512c43a"><span class="section-number-3">1.1.</span> <a href="#org512c43a">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org4061746" class="outline-2">
-<h2 id="org4061746"><span class="section-number-2">2.</span> <a href="#org4061746">打工</a></h2>
+<div id="outline-container-orgea5f20a" class="outline-2">
+<h2 id="orgea5f20a"><span class="section-number-2">2.</span> <a href="#orgea5f20a">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgbae2530" class="outline-2">
-<h2 id="orgbae2530"><span class="section-number-2">3.</span> <a href="#orgbae2530">我的928</a></h2>
+<div id="outline-container-orgc024e4d" class="outline-2">
+<h2 id="orgc024e4d"><span class="section-number-2">3.</span> <a href="#orgc024e4d">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org5d2d6c0" class="outline-3">
-<h3 id="org5d2d6c0"><span class="section-number-3">3.1.</span> <a href="#org5d2d6c0">928演唱会(bushi</a></h3>
+<div id="outline-container-orgce6f26e" class="outline-3">
+<h3 id="orgce6f26e"><span class="section-number-3">3.1.</span> <a href="#orgce6f26e">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org99597f5">
+<figure id="orga4a131e">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org46b3bfc">
+<figure id="orge1f57ec">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org5669d90" class="outline-2">
-<h2 id="org5669d90"><span class="section-number-2">4.</span> <a href="#org5669d90">他们的928</a></h2>
+<div id="outline-container-org5e8ce95" class="outline-2">
+<h2 id="org5e8ce95"><span class="section-number-2">4.</span> <a href="#org5e8ce95">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgcc7fe4f" class="outline-2">
-<h2 id="orgcc7fe4f"><span class="section-number-2">5.</span> <a href="#orgcc7fe4f">总结</a></h2>
+<div id="outline-container-org0764ac5" class="outline-2">
+<h2 id="org0764ac5"><span class="section-number-2">5.</span> <a href="#org0764ac5">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-16 15:17</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-17 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
